# smallfield-super-sumcheck

./: .gitignore  Cargo.toml
benches/: baby_bear.rs  baby_bear_primitives.rs  binius_tower_field.rs  bls12_381.rs  bls12_381_naive.rs  bn254.rs  btf_sumcheck.rs  mult.rs
src/: btf_transcript.rs  data_structures.rs  extension_test.rs  helpers.rs  lib.rs  prover.rs  test.rs  utils.rs  verifier.rs
src/algorithms/: four.rs  one.rs  three.rs  two.rs
src/tests/: baby_bear.rs  bls12_381.rs  bn254.rs  btf_sumcheck.rs  fields.rs  goldilocks.rs  mod.rs  simple_tests.rs
src/tower_fields/: binius.rs  mod.rs
